Fixing issue where index page not centered while logged out

--- a/improvisor/static/CSS/improvisor_styles.css
+++ b/improvisor/static/CSS/improvisor_styles.css
@@ -113,6 +113,8 @@ body {
     padding: 20px;
     background-color: rgb(255, 255, 255, 0.9);
     border-radius: 12px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 20px;
 }
 
